# QRab

./: .gitignore  1.app.js  Cargo.toml  app.js  app.wasm  index.html  index.js  package-lock.json  package.json  style.scss  webpack.config.js
.github/workflows/: deploy.yml
src/: app.rs  button.rs  lib.rs
