[package]
name = "app"
version = "0.1.0"
authors = ["huhn511 <huhn@einfachIOTA.de>", "r3p0x"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.16"
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
rqrr = "0.2.0"
image = "0.21.2"